[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/LineEdit.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_color = Color( 1, 1, 1, 1 )

[node name="LineEdit" type="LineEdit"]
margin_right = 26.0
margin_bottom = 18.0
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0.427451, 0.486275, 0.584314, 1 )
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
script = ExtResource( 1 )

[node name="BorderLeft" type="ColorRect" parent="."]
margin_left = -1.0
margin_top = 1.0
margin_bottom = 19.0
color = Color( 0.427451, 0.486275, 0.584314, 1 )

[node name="BorderTop" type="ColorRect" parent="."]
margin_left = 1.0
margin_top = -1.0
margin_right = 25.0
color = Color( 0.427451, 0.486275, 0.584314, 1 )

[node name="BorderRight" type="ColorRect" parent="."]
margin_left = 26.0
margin_top = 1.0
margin_right = 27.0
margin_bottom = 17.0
color = Color( 0.427451, 0.486275, 0.584314, 1 )

[node name="BorderBottom" type="ColorRect" parent="."]
margin_top = 18.0
margin_right = 25.0
margin_bottom = 19.0
color = Color( 0.427451, 0.486275, 0.584314, 1 )

[node name="CornerTopLeft" type="ColorRect" parent="."]
margin_right = 1.0
margin_bottom = 1.0
color = Color( 0.427451, 0.486275, 0.584314, 1 )

[node name="CornerTopRight" type="ColorRect" parent="."]
margin_left = 25.0
margin_right = 26.0
margin_bottom = 1.0
color = Color( 0.427451, 0.486275, 0.584314, 1 )

[node name="CornerBottomRight" type="ColorRect" parent="."]
margin_left = 25.0
margin_top = 17.0
margin_right = 26.0
margin_bottom = 18.0
color = Color( 0.427451, 0.486275, 0.584314, 1 )
